--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -29,21 +29,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'yarn'
 
-      - name: Install ESLint
-        run: |
-          yarn add eslint@8.10.0
-          yarn add @microsoft/eslint-formatter-sarif@3.1.0
+      - name: Install dependencies
+        run: yarn install --ignore-scripts
 
-      - name: Run ESLint
-        env:
-          SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
-        run: npx eslint .
-          --config .eslintrc.js
-          --ext .js,.jsx,.ts,.tsx
-          --format @microsoft/eslint-formatter-sarif
-          --output-file eslint-results.sarif
-        continue-on-error: true
+      - name: Run ESLint (SARIF output)
+        run: yarn lint || true
+        # lint script already outputs eslint-results.sarif using built-in sarif formatter
 
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v3
