Add ESLint results in SARIF format for code analysis
- Generated ESLint results file `eslint-results.sarif` containing warnings for code style issues.
- Included rules for consistent brace style and semicolon usage.
- Documented multiple instances of missing braces after 'if' conditions and missing semicolons across various source files.

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -47,3 +47,11 @@ jobs:
         with:
           sarif_file: eslint-results.sarif
           wait-for-processing: true
+
+      - name: Always upload raw SARIF artifact (debug)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: eslint-sarif-raw
+          path: eslint-results.sarif
+          if-no-files-found: error
