--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
     "check-types": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.js --format sarif --output-file eslint-results.sarif",
+  "lint": "eslint src --ext .ts,.js --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif",
     "test": "vscode-test",
     "publish": "yarn run package && vsce publish",
     "package-extension": "yarn run package && vsce package"
@@ -109,6 +109,7 @@
     "@vscode/vsce": "^3.6.0",
     "esbuild": "^0.25.3",
     "eslint": "^9.25.1",
+  "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.8.3"
   }
